--- a/view/role/index.html
+++ b/view/role/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>menu</title>
-    <meta name="csrf-token" content="<{:token()}>">
+    <meta name="csrf-token" content="<{:token('__roletoken__')}>">
     <link rel="stylesheet" href="__STATIC__/layuimini/lib/layui-v2.5.5/css/layui.css" media="all">
     <link rel="stylesheet" href="__STATIC__/layuimini/css/public.css" media="all">
     <style>
