--- a/view/login/login.html
+++ b/view/login/login.html
@@ -75,7 +75,7 @@
 
         //回车键触发登录事件
         $(document).on('keydown', function(e) {
-            if(e.keyCode = 13) {
+            if(e.keyCode == 13) {
                 loginclick();
             }
         });
