--- a/view/role/index.html
+++ b/view/role/index.html
@@ -136,29 +136,11 @@
 
         //监听pidname下拉框
         form.on('select(pidname)', function(data){
-            if(data.value === 1) {
+            if(data.value === 1 || data.value === 0) {
                 menusListChoose = getAllMenusList;
             }else {
                 menusListChoose = [];
-                $.each(selectRoleForMenusId[data.value], function(y, value) {
-                    $.each(getAllMenusList, function(i, item) {
-                        if(value == item.id) {
-                            if(item.children) {
-                                var param = {
-                                    id: item.id,
-                                    pid: item.pid,
-                                    title: item.title,
-                                    href: item.href,
-                                    children: []
-                                };
-                                param.children = ergodicList(item.children, selectRoleForMenusId[data.value]);
-                                menusListChoose.push(param);
-                            }else {
-                                menusListChoose.push(item);
-                            }
-                        }
-                    });
-                });
+                listFirst(data.value);
             }
         });
 
@@ -167,6 +149,7 @@
          */
         table.on('toolbar(munu-table)', function (obj) {
             if (obj.event === 'add') {  // 监听添加操作
+                $('#pidname').attr('disabled', false);
                 $('#addeditform')[0].reset();
                 $('#id').val('');
                 $('#pid').val(0);
@@ -216,6 +199,16 @@
                     });
                 });
             } else if (layEvent === 'edit') {
+                $('#pidname').attr('disabled', 'disabled'); //禁用下拉框
+
+                //重置菜单列表
+                if(data.id === 1 || data.pid === 0) {
+                    menusListChoose = getAllMenusList;
+                }else {
+                    menusListChoose = [];
+                    listFirst(data.id);
+                }
+
                 updateMenusList = data.menus_id;
                 form.val("addeditform", {
                     "id": data.id,
@@ -294,6 +287,27 @@
             });
         };
         //递归遍历整理指定的菜单列表
+        var listFirst = function(id) {
+            $.each(selectRoleForMenusId[id], function(y, value) {
+                $.each(getAllMenusList, function(i, item) {
+                    if(value == item.id) {
+                        if(item.children) {
+                            var param = {
+                                id: item.id,
+                                pid: item.pid,
+                                title: item.title,
+                                href: item.href,
+                                children: []
+                            };
+                            param.children = ergodicList(item.children, selectRoleForMenusId[id]);
+                            menusListChoose.push(param);
+                        }else {
+                            menusListChoose.push(item);
+                        }
+                    }
+                });
+            });
+        };
         var ergodicList = function(arr, rolemenus) {
             var child = [];
             $.each(rolemenus, function(y, value) {
@@ -357,7 +371,7 @@
                 }
             });
         };
-
+        //修改方法
         var update = function() {
             var id = $('#id').val();
             var title = $('#title').val();
