--- a/view/role/index.html
+++ b/view/role/index.html
@@ -113,8 +113,9 @@
             ]],
             done: function (res, curr, count) {
                 var htmls = '';
+                htmls += '<option value = "' + user_info.role_id + '">' + user_info.role_name + '</option>';
                 $.each(res.data, function(i, item) {
-                    htmls += '<option value = "' + item.id + '">' + item.role_name + '</option>'
+                    htmls += '<option value = "' + item.id + '">' + item.role_name + '</option>';
                     selectRoleForMenusId[item.id] = item.menus_id;
                 });
                 $('#pidname').append(htmls);
